config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: django-container
  template:
    metadata:
      labels:
        pod: django-container
    spec:
      containers:
        - name: django-web
          image: apapacy/tut-django:1.0.1
          ports:
            - containerPort: 8000
